@startuml Common Resources ClassDiagram, Group01.

title Common Resources Class Diagram, Group01.

skinparam ClassAttributeIconSize 0
class Variables{
    - varMap : Map<Character, ComplexNumber>
    + Variables()
    + getVariable(name : char) : ComplexNumber
    + setVariable(name : char, value : ComplexNumber) : void
}

class ComplexNumber{
    - a : double
    - b : double
    + ComplexNumber(a : double,b : double)
    + ComplexNumber(a : double)
    + ComplexNumber(text : String)
    + getA() : double
    + getB() : double 
    + setA(a : double) : void
    + setB(b : double) : void
    + toString() : String
}


class InputDistinguisher{
    + InputDistinguisher()
    + isComplexNumber(text : String) : boolean
    + isStackOperation(text : String) : boolean
    + isVariablesOperation (text : String) : boolean
    + isMathOperation (text : String) : boolean
}

class ScientificCalculator{
    - complexNumbersStack : Stack<ComplexNumber>
    - variable : Variables
    - inputDistinguisher : InputDistinguisher
    + ScientificCalculator()
    + calculate(input : String) : void 
    + getTop12Numbers() : List<ComplexNumber>
    + saveComplexNumber(number : String) : void
    + calculateMathOperation(operation : String) : void
    + calculateStackOperation(operation : String) : void
    + calculateVariablesOperation(operation : String) : void
}

ComplexNumber "many" o-- "1" ScientificCalculator
Variables "many" *-- "1" ScientificCalculator
InputDistinguisher "1" *-- "1" ScientificCalculator

@enduml